test/simple/typeerrors/Heuristics/JavaStringConcat.hs
module JavaStringConcat where

test = "abc" + "def" 
